--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -38,9 +38,9 @@ Author URL: http://w3layouts.com
 <!-- //inner banner -->
 
 <!-- Welcome block -->
-<section class="w3l-contact py-5" id="contact">
-  <div class="container py-md-5 py-4">
-    <div class="title-main text-center mx-auto mb-md-5 mb-4" style="max-width:500px;">
+<section class="w3l-contact py-1" id="contact">
+  <div class="container py-md-1 py-1">
+    <div class="title-main text-center mx-auto mb-md-1 mb-1" style="max-width:500px;">
       <h3 class="title-style" th:text="${'Welcome - ' + username}"></h3>
       <p class="" th:text="${'You logged in as - ' + roles}"></p>
       <p class="" th:if="${!#strings.isEmpty(enrolledClass)}" th:text="${'Your assigned class is - [' + enrolledClass+']'}"></p>
@@ -71,7 +71,7 @@ Author URL: http://w3layouts.com
           </a>
         </div>
         <div class="col-sm-6 col-lg-3" sec:authorize="hasRole('ROLE_ADMIN')">
-          <a th:href="@{/displayMessages}">
+          <a th:href="@{/displayMessages/page/1?sortField=name&sortDir=desc}">
             <div class="overview-item overview-item--c3">
               <div class="overview__inner">
                 <div class="overview-box clearfix">
@@ -138,10 +138,6 @@ Author URL: http://w3layouts.com
     </div>
   </div>
 </div>
-
-
-
-
 
 <!-- footer block -->
 <div th:replace="~{footer :: footer}">...</div>
@@ -228,3 +224,4 @@ Author URL: http://w3layouts.com
 </body>
 
 </html>
+Footer
